Fix skeleton image rendering too small

--- a/src/components/Photo.module.css
+++ b/src/components/Photo.module.css
@@ -34,6 +34,7 @@
 }
 
 .skeleton {
+  width: 100%;
   aspect-ratio: 1.5;
   opacity: 20%;
   background: #a0a0a0;
